human_written_tests/WebAssembly/processed_control_flow_validation/test_unreachable_8.wast
(assert_invalid
  (module (func $type-unconsumed-const (unreachable) (i32.const 0)))
  "type mismatch"
)